--- a/404.html
+++ b/404.html
@@ -2,20 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Página não encontrada</title>
+    <title>Redirecionando...</title>
     <script>
-      // Obtém o caminho base do repositório
-      var pathSegmentsToKeep = 1;
+      // Obtém o caminho completo (sem o nome do host)
+      var path = window.location.pathname.replace(/\/$/, '');
 
-      var l = window.location;
-      var p = l.pathname.split('/');
-      var base = p.slice(0, 1 + pathSegmentsToKeep).join('/') + '/';
-
-      // Redireciona para o caminho base, mantendo a rota do React Router
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        base + '#' +
-        l.pathname.slice(base.length) + l.search + l.hash
+      // Redireciona para o index.html, passando o caminho na hash
+      window.location.replace(
+        path.substring(0, path.lastIndexOf('/')) + '/index.html#' + path.slice(path.lastIndexOf('/') + 1)
       );
     </script>
   </head>
